# TimeSide

./: .buildinfo  .coveralls.yml  .dockerignore  .env  .env.sample  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.txt  CNAME  Dockerfile  GCP explanation EN.md  INSTALL  INSTALL.html  INSTALL.rst  LICENSE.txt  MANIFEST.in  NEWS.rst  README  README.html  README.md  README.rst  __init__.py  api.py  app-claim2-persistentvolumeclaim.yaml  app-deployment.yaml  architecture.html  cached.yml  component.py  conda-environment.yml  conda-requirements.txt  copyright.html  core.py  db-claim0-persistentvolumeclaim.yaml  debian-requirements.txt  dependabot.yml  development.html  divein.html  (+49 more)
TimeSide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_modules/: index.html
_sources/: architecture.rst.txt  copyright.rst.txt  doc.rst.txt  index.rst.txt  intro.rst.txt  production.rst.txt  related.rst.txt  ui.rst.txt
_static/: documentation_options.js
analysis/: __init__.py  channels.py  core.py  duration.py  mean_level.py  resolution.py  samplerate.py
analyze/: __init__.py  api.py  channels.py  core.py  dc.py  duration.py  encoding.py  format.py  max_level.py  mean_level.py  resolution.py  samplerate.py
analyzer/: __init__.py  core.py  duration.py  max_level.py
api/: index.html
app/: __init__.py  app.sh  app_base.sh  local_settings.py.example  local_settings_first.py.example  local_settings_last.py.example  manage.py  package-lock.json  package.json  settings.py  test_settings.py  update_environment.sh  urls.py  wait.py  worker.py  wsgi.py  (+2 more)
(+1432 files in other folders)
