[tool.poetry]
name = "timeside"
version = "1.2.0"
description = "scalable audio processing framework and server written in Python"
authors = ["Guillaume Pellerin <guillaume.pellerin@ircam.fr>"]
license = "AGPL"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
aubio = "^0.4.9"
celery = "^5.2.7"
django = "3.2.18"
django-celery-results = "^2.5.0"
django-cors-headers = "^3.14.0"
django-debug-toolbar = "^3.8.1"
django-environ = "^0.10.0"
django-extensions = "^3.2.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
essentia = "2.1b6.dev858"
h5py = "^3.8.0"
jupyter = "^1.0.0"
librosa = "^0.10.0.post2"
matplotlib = "3.1.3"
networkx = "1.11"
numpy = "1.20.3"
openapi = "^1.1.0"
pillow = "^9.4.0"
pygobject = "^3.44.1"
psycopg2-binary = "^2.9.5"
pyyaml = "^6.0"
scipy = "1.4.1"
uwsgi = "^2.0.21"
yt-dlp = "^2023.3.4"
traits = "^6.4.1"
simplejson = "^3.18.4"
tables = "3.6.1"
importlib-metadata = "4.13.0"
django-filter = "^23.1"
jsonfield = "^3.1.0"
xmljson = "^0.2.1"
redis = "^4.5.4"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core", "setuptools", "wheel", "numpy"]
build-backend = "poetry.core.masonry.api"
# build-backend = "setuptools.build_meta"
